# polymarket-bot

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.web  PLAN.md  README.md  TODO.md  docker-compose.yml  main.py  markets.py  migrate_signals.py  paper_trade_plan.md  pyproject.toml  run_paper_trade.sh
.github/workflows/: ci.yml  paper-trade.yml  recalibrate.yml
diagrams/: architecture.tex
legal/: NDA.tex
proto/: trader.proto
python/: api.py  calibration.py  check_setup.py  client.py  db.py  funnel.py  main.py  paper_trade.py  seed_mock_data.py  test_dashboard.py  test_funnel.py  test_order.py  test_shapley.py  whale_finder.py
python/proto/: trader_pb2.py  trader_pb2_grpc.py
python/strategies/: llm.py  shapley_weights.py
python/tests/: test_calibration.py  test_paper_trade.py  test_tier3_guard.py
rust/: Cargo.toml  build.rs
rust/src/: executor.rs  main.rs  ws.rs
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  providers.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/(dashboard)/analytics/: page.tsx
web/components/dashboard/: calibration-chart.tsx  disagreement-accuracy-chart.tsx  edge-histogram.tsx  edge-outcome-chart.tsx  equity-curve.tsx  model-vote-strip.tsx  open-positions.tsx  position-detail.tsx  position-state-strip.tsx  resolved-trades.tsx  rolling-win-rate.tsx  section-header.tsx  stats-strip.tsx  top-bar.tsx
web/lib/: api.ts  hooks.ts  metrics.ts  types.ts
