[project]
name = "signum"
version = "0.1.0"
description = "Autonomous prediction market trading bot using multi-LLM consensus"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "libsql>=0.1.11",
    "openai>=2.30.0",
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "tavily-python>=0.7.23",
    "uvicorn>=0.42.0",
]
