[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.12"
