[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
# order signing
alloy-primitives = "0.8"
alloy-sol-types  = "0.8"
alloy-signer     = "0.8"
alloy-signer-local = "0.8"
# L2 HMAC auth
hmac    = "0.12"
sha2    = "0.10"
hex     = "0.4"
base64  = "0.22"
# helpers
anyhow  = "1"
dotenvy = "0.15"

# TUI dashboard
ratatui   = "0.29"
crossterm = "0.28"
rusqlite  = { version = "0.32", features = ["bundled"] }

[build-dependencies]
tonic-build = "0.12"
